--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,9 @@
 ---
 machine:
   ruby:
-    version: jruby-1.7.19
+    version: jruby-9.1.2.0
   java:
     version: oraclejdk8
   environment:
     RAILS_ENV: test
-    JRUBY_OPTS: -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -X-C -Xcompile.invokedynamic=false --1.9 -J-Xmx2g
+    JRUBY_OPTS: -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -X-C -Xcompile.invokedynamic=false -J-Xmx2g
