install semver before

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ before_script:
   - "export RAILS_ENV=test"
   - "export JRUBY_OPTS=\"-J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -X-C -Xcompile.invokedynamic=false -J-Xmx2g\""
 
-install: bundle install
+install:
+  - gem install semver
+  - bundle install
