--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,10 +15,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Ruby 2.7
+      - name: Set up Ruby
         uses: actions/setup-ruby@v1
-        with:
-          version: 2.7.x
       - name: Publish to RubyGems
         run: |
           mkdir -p $HOME/.gem
